new code updated

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -34,7 +34,8 @@ body {
 .slider-flex-box {
   flex-direction: row;
   gap: 10px;
-  align-items: center;
+  align-items: flex-start;
+  font-family: 'Lexend';
 }
 h1,
 h2,
@@ -49,9 +50,53 @@ h6 {
   .slider-flex-box {
     flex-direction: row;
     gap: 10px;
-    align-items: center;
+    align-items: flex-start;
   }
   .mb-margin {
     margin: 1rem;
   }
+}
+
+.bg-testimonial {
+  background-image: url('../../images/Subtract.png');
+  background-size: contain;
+  background-repeat: no-repeat;
+  /* background-position: left; */
+}
+
+.profile-testimonial {
+  position: relative;
+  top: -51px;
+  left: -51px;
+}
+.bg-testimonials {
+  background-image: url('../../public/images/bg-testimonial.jpg');
+}
+
+.slider-flex-box {
+  flex-direction: row;
+  gap: 10px;
+  align-items: flex-start;
+  font-family: 'Lexend';
+}
+.custom-gradient-text {
+  background: linear-gradient(
+    105.06deg,
+    #ffffff 26.47%,
+    #aeaeae 31.74%,
+    #d1d1d1 42.3%,
+    #e0e0e0 48.42%,
+    #4b4b4b 52.68%,
+    #ffffff 57.1%,
+    #ffffff 61.87%
+  );
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  font-size: 86px !important;
+}
+.counter-box p {
+  font-size: 16px !important;
+}
+.testimonial-pera {
+  font-size: 16px !important;
 }
