--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -52,6 +52,27 @@ h6 {
     gap: 10px;
     align-items: flex-start;
   }
+  header {
+    position: fixed;
+    top: 0;
+    z-index: 99999;
+    background-color: white;
+    padding-bottom: 20px;
+    width: 100%;
+  }
+
+  main {
+    margin-top: 6rem;
+  }
+
+  .boder-slider-light {
+    margin: auto;
+    border: 1px solid #b2b2b2;
+    background-color: #b2b2b2;
+    height: 67px !important;
+    margin-left: 11px !important;
+    margin-right: 11px !important;
+  }
 
   .custom-gradient-text {
     background: linear-gradient(
@@ -66,7 +87,7 @@ h6 {
     );
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
-    font-size: 57px !important;
+    font-size: 30px !important;
   }
   .mb-margin {
     margin: 1rem;
@@ -89,6 +110,11 @@ h6 {
     background-size: contain;
     background-repeat: no-repeat;
     /* background-position: left; */
+  }
+
+  .counter-box {
+    padding-left: 40px !important;
+    padding-right: 40px !important;
   }
 
   .profile-testimonial {
@@ -114,7 +140,7 @@ h6 {
     );
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
-    font-size: 86px !important;
+    font-size: 60px !important;
   }
 }
 
@@ -130,4 +156,44 @@ h6 {
 }
 .testimonial-pera {
   font-size: 16px !important;
+}
+.boder-slider-light {
+  margin: auto;
+  border: 1px solid #b2b2b2;
+  background-color: #b2b2b2;
+  height: 107px;
+  margin-left: 14px;
+}
+
+.text-slider-box.text-center.pt-10 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 60%;
+  margin: auto;
+}
+
+.buttlets-testimonail {
+  border-radius: 0px;
+  height: 2px;
+  width: 50px;
+}
+
+header {
+  position: fixed !important;
+  top: 0;
+  z-index: 9999;
+  top: 0;
+  background-color: white;
+  width: 100%;
+  z-index: 9999;
+  padding-bottom: 10px;
+}
+.mega-menu-ful-width {
+  width: 1330px;
+  left: -44rem;
+}
+
+main {
+  margin-top: 5rem !important;
 }
