--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -47,6 +47,17 @@ h6 {
 }
 
 @media screen and (max-width: 768px) {
+  .our-process-heading {
+    font-size: 1.875rem !important;
+  }
+  .slider-dis-box {
+    bottom: 0rem;
+    box-shadow: 0px 2px 2px 0px #0000000d;
+  }
+
+  .slider-bg-main {
+    height: 60vh !important;
+  }
   .slider-flex-box {
     flex-direction: row;
     gap: 10px;
